# hopper

./: Makefile
circuit/: CMakeLists.txt  mixer.cpp  mixer.hpp  mixer_cli.cpp  mixer_selftest.cpp
circuit/gadgets/: sha256_eth_fields.hpp  sha256_ethereum.hpp
ethsnarks/: CMakeLists.txt
ethsnarks/depends/libsnark/depends/libfqfft/depends/libff/libff/common/: profiling.cpp
ethsnarks/depends/libsnark/libsnark/gadgetlib1/gadgets/hashes/sha256/: sha256_components.hpp  sha256_components.tcc
ethsnarks/ethsnarks/: verifier.py
ethsnarks/src/: CMakeLists.txt  export.cpp  export.hpp  import.cpp  import.hpp  utils.cpp  utils.hpp
ethsnarks/src/gadgets/: CMakeLists.txt  sha256_full.cpp
ethsnarks/src/jubjub/: point.cpp
ethsnarks/src/mod/: hashpreimage.cpp
python/: mixer.py
python/test/: test_mixer.py
solidity/: Makefile  package.json  truffle.js
solidity/test/: mixer.js
solidity/test/helpers/: libmixer.js
wasm/: .gitignore  CMakeLists.txt  Makefile
wasm/example/: .gitignore  index.html
